--- a/templates/landing.html
+++ b/templates/landing.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="testimonial-card">
                         <p>"The discharge summaries are incredibly thorough and patients appreciate the clarity of the documentation."</p>
-                        <div class="testimonial-author">Dr. Johnson, Internal Medicine</div>
+                        <div class="testimonial-author">Dr. Dhanya, Internal Medicine</div>
                     </div>
                     <div class="testimonial-card">
                         <p>"The emergency prediction feature helped me identify a critical issue I might have missed otherwise."</p>
