--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,14 +11,17 @@
     <div class="landing-container">
         <nav>
             <div class="logo">
-                <img src="{{ url_for('static', filename='logo.png') }}" alt="ChartWitch Logo">
+                <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo-light">
+                <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo-dark">
             </div>
             <div class="nav-buttons">
                 <a href="/login" class="nav-button">Login</a>
                 <a href="/login#" class="nav-button signup-btn">Sign up</a>
             </div>
         </nav>
-
+        <button class="dark-mode-toggle" aria-label="Toggle Dark Mode">
+            <i class="fas fa-moon"></i>
+        </button>
         <main>
             <div class="hero-section">
                 <div class="hero-content">
@@ -101,7 +104,8 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="{{ url_for('static', filename='logo.png') }}" alt="ChartWitch Logo">
+                    <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo-dark">
+                    <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo-light">
                     <p>ChartWitch - Automate Medical Notes</p>
                 </div>
                 <div class="footer-links">
@@ -139,3 +143,4 @@
     <script src="{{ url_for('static', filename='landing.js') }}"></script>
 </body>
 </html>
+
