--- a/templates/landing.html
+++ b/templates/landing.html
@@ -137,8 +137,8 @@
     <div class="landing-container">
         <nav>
             <div class="logo-container">
-                <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo">
-                <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo">
+                <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo">
+                <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo">
             </div>
             <div class="nav-buttons">
                 <a href="/login" class="nav-button">Login</a>
